fixed some details in itemsPost

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -24,5 +24,6 @@
         "hours":"{{currentHours}} hours ago",
         "yesterday":"Yesterday",
         "beforeYesterday":"Before yesterday"
-    }
+    },
+    "messageNew":"Read new."
 }
